--- a/EcommerceWeb/Views/Category/Index.cshtml
+++ b/EcommerceWeb/Views/Category/Index.cshtml
@@ -1,3 +1,25 @@
-﻿<h2>
+﻿@using Ecommerce.Models
+@model List<Category>
+
+<h2>
     Category List
 </h2>
+
+<table>
+    <tr>
+        <th>Name</th>
+        <th>Price</th>
+    </tr>
+
+    @foreach (var i in Model)
+    {
+        <tr>
+            <td>@i.Name</td>
+            <td>@i.DisplayOrder</td>
+            <td><a asp-controller="Product" asp-action="Edit" asp-route-id="@i.Id" class="btn primary">Edit</a></td>
+            <td><a asp-controller="Product" asp-action="Delete" asp-route-id="@i.Id" class="btn danger">Delete</a></td>
+        </tr>
+    }
+</table>
+
+<a asp-controller="Product" asp-action="Create">Create</a>
