--- a/EcommerceWeb/Views/Category/Index.cshtml
+++ b/EcommerceWeb/Views/Category/Index.cshtml
@@ -16,10 +16,10 @@
         <tr>
             <td>@i.Name</td>
             <td>@i.DisplayOrder</td>
-            <td><a asp-controller="Product" asp-action="Edit" asp-route-id="@i.Id" class="btn primary">Edit</a></td>
-            <td><a asp-controller="Product" asp-action="Delete" asp-route-id="@i.Id" class="btn danger">Delete</a></td>
+            <td><a asp-controller="Category" asp-action="Edit" asp-route-id="@i.Id" class="btn primary">Edit</a></td>
+            <td><a asp-controller="Category" asp-action="Delete" asp-route-id="@i.Id" class="btn danger">Delete</a></td>
         </tr>
     }
 </table>
 
-<a asp-controller="Product" asp-action="Create">Create</a>
+<a asp-controller="Category" asp-action="Create">Create</a>
