Added foreign key categoryId to product

--- a/EcommerceWeb/Areas/Customer/Views/Product/Create.cshtml
+++ b/EcommerceWeb/Areas/Customer/Views/Product/Create.cshtml
@@ -36,6 +36,10 @@
     <input asp-for="Price100"><br>
     <span asp-validation-for="Price100" class="text-danger"></span>
     <br />
+    <label asp-for="CategoryId"></label><br>
+    <input asp-for="CategoryId"><br>
+    <span asp-validation-for="CategoryId" class="text-danger"></span>
+    <br />
     <input type="submit" value="Submit">
 
     <a asp-controller="Product" asp-action="Index" class="btn">return to list</a>
