--- a/EcommerceWeb/Areas/Customer/Views/Product/Delete.cshtml
+++ b/EcommerceWeb/Areas/Customer/Views/Product/Delete.cshtml
@@ -27,7 +27,10 @@
     <br />
     <label asp-for="Price100"></label><br>
     <input disabled asp-for="Price100"><br>
-
+    <br />
+    <label asp-for="CategoryId"></label><br>
+    <input disabled asp-for="CategoryId"><br>
+    <br />
     <input type="submit" value="Submit">
 
     <a asp-controller="Product" asp-action="Index" class="btn">return to list</a>
