--- a/EcommerceWeb/Areas/Customer/Views/Home/Index.cshtml
+++ b/EcommerceWeb/Areas/Customer/Views/Home/Index.cshtml
@@ -1,8 +1,33 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@model IEnumerable<Product>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="row pb-3">
+    @foreach(var product in Model)
+    {
+        <div class="col-lg-3 col-sm-6">
+            <div class="row p-2">
+                <div class="col-12 p-1">
+                    <div class="card border-0 p-3 shadow border-top border-5 rounded">
+                        <img src="@product.ImageUrl" class="card-img-top rounded" />
+                        <div class="card-body">
+                            <div class="pl-1">
+                                <p>@product.Title</p>
+                                <p>@product.Author</p>
+                            </div>
+                            <div class="pl-1">
+                                <p>@product.ListPrice.ToString("c")</p>
+                            </div>
+                            <div class="pl-1">
+                                <p> As low as: @product.Price100.ToString("c")</p>
+                            </div>
+                        </div>
+                        <div>
+                            <a asp-action="Details" asp-route-id="@product.Id" class="btn btn-primary bg-gradient border-0 form-control">
+                                    Details
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div> 
+        </div>
+    }
 </div>
