Added Identity scaffolding successfully and partial view for login and register

--- a/EcommerceWeb/Views/Shared/_Layout.cshtml
+++ b/EcommerceWeb/Views/Shared/_Layout.cshtml
@@ -33,6 +33,8 @@
                         </li>
                     </ul>
                 </div>
+
+                <partial name="_loginPartial"></partial>
             </div>
         </nav>
     </header>
