Db reset and added manga products

--- a/EcommerceWeb/Areas/Admin/Views/Product/Delete.cshtml
+++ b/EcommerceWeb/Areas/Admin/Views/Product/Delete.cshtml
@@ -10,26 +10,17 @@
     <label asp-for="Description"></label><br>
     <input disabled asp-for="Description"><br>
     <br />
-    <label asp-for="ISBN"></label><br>
-    <input disabled asp-for="ISBN"><br>
-    <br />
     <label asp-for="Author"></label><br>
     <input disabled asp-for="Author"><br>
-    <br />
-    <label asp-for="ListPrice"></label><br>
-    <input disabled asp-for="ListPrice"><br>
     <br />
     <label asp-for="Price"></label><br>
     <input disabled asp-for="Price"><br>
     <br />
-    <label asp-for="Price50"></label><br>
-    <input disabled asp-for="Price50"><br>
-    <br />
-    <label asp-for="Price100"></label><br>
-    <input disabled asp-for="Price100"><br>
-    <br />
     <label asp-for="CategoryId"></label><br>
     <input disabled asp-for="CategoryId"><br>
+    <br />
+    <label asp-for="Volume"></label><br />
+    <input disabled asp-for="Volume"><br>
     <br />
     <input type="submit" value="Submit">
 
