--- a/EcommerceWeb/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/EcommerceWeb/Areas/Admin/Views/Product/Upsert.cshtml
@@ -19,31 +19,18 @@
             <input asp-for="Product.Description"><br>
             <span asp-validation-for="Product.Description" class="text-danger"></span>
             <br />
-            <label asp-for="Product.ISBN"></label><br>
-            <input asp-for="Product.ISBN"><br>
-            <span asp-validation-for="Product.ISBN" class="text-danger"></span>
-            <br />
             <label asp-for="Product.Author"></label><br>
             <input asp-for="Product.Author"><br>
             <span asp-validation-for="Product.Author" class="text-danger"></span>
             <br />
-            <label asp-for="Product.ListPrice"></label><br>
-            <input asp-for="Product.ListPrice"><br>
-            <span asp-validation-for="Product.ListPrice" class="text-danger"></span>
+            <label asp-for="Product.Volume"></label><br>
+            <input asp-for="Product.Volume"><br>
+            <span asp-validation-for="Product.Volume" class="text-danger"></span>
             <br />
             <label asp-for="Product.Price"></label><br>
             <input asp-for="Product.Price"><br>
             <span asp-validation-for="Product.Price" class="text-danger"></span>
             <br />
-            <label asp-for="Product.Price50"></label><br>
-            <input asp-for="Product.Price50"><br>
-            <span asp-validation-for="Product.Price50" class="text-danger"></span>
-            <br />
-            <label asp-for="Product.Price100"></label><br>
-            <input asp-for="Product.Price100"><br>
-            <span asp-validation-for="Product.Price100" class="text-danger"></span>
-            <br />
-            
             <label asp-for="Product.ImageUrl"></label><br>
             <input type="file" name="file"><br>
             <br />
