--- a/EcommerceWeb/Areas/Identity/Pages/Account/Register.cshtml
+++ b/EcommerceWeb/Areas/Identity/Pages/Account/Register.cshtml
@@ -18,6 +18,11 @@
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
+                <input asp-for="Input.Name" class="form-control" aria-required="true" placeholder="Name" />
+                <label asp-for="Input.Name"></label>
+                <span asp-validation-for="Input.Name" class="text-danger"></span>
+            </div>
+            <div class="form-floating mb-3">
                 <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
                 <label asp-for="Input.Password">Password</label>
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
@@ -28,27 +33,27 @@
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
-                <input asp-for="Input.Name" class="form-control"/>
-                <label asp-for="Input.Name"></label>
-                <span asp-validation-for="Input.Name" class="text-danger"></span>
+                <input asp-for="Input.PhoneNumber" class="form-control" aria-required="true" placeholder="Name" />
+                <label asp-for="Input.PhoneNumber"></label>
+                <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
-                <input asp-for="Input.StreetAddress" class="form-control"/>
+                <input asp-for="Input.StreetAddress" class="form-control" aria-required="true" placeholder="Name"/>
                 <label asp-for="Input.StreetAddress"></label>
                 <span asp-validation-for="Input.StreetAddress" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
-                <input asp-for="Input.City" class="form-control"/>
+                <input asp-for="Input.City" class="form-control" aria-required="true" placeholder="Name" />
                 <label asp-for="Input.City"></label>
                 <span asp-validation-for="Input.City" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
-                <input asp-for="Input.State" class="form-control"/>
+                <input asp-for="Input.State" class="form-control" aria-required="true" placeholder="Name" />
                 <label asp-for="Input.State"></label>
                 <span asp-validation-for="Input.State" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
-                <input asp-for="Input.PostalCode" class="form-control"/>
+                <input asp-for="Input.PostalCode" class="form-control" aria-required="true" placeholder="Name"  />
                 <label asp-for="Input.PostalCode"></label>
                 <span asp-validation-for="Input.PostalCode" class="text-danger"></span>
             </div>
