--- a/EcommerceWeb/Areas/Customer/Views/ShoppingCart/Summary.cshtml
+++ b/EcommerceWeb/Areas/Customer/Views/ShoppingCart/Summary.cshtml
@@ -93,7 +93,7 @@
 											<h6 class="my-0">@item.Product.Title</h6>
 											<small class="text-muted">Quantity: @item.Count</small>
 										</div>
-										<span class="text-muted">@((@item.Product.Price * @item.Count).ToString("c")) </span>
+										<span class="text-muted">@((@item.Price * @item.Count).ToString("c")) </span>
 									</li>
 								}
 
