Added Order details to view

--- a/EcommerceWeb/Areas/Admin/Views/Order/Index.cshtml
+++ b/EcommerceWeb/Areas/Admin/Views/Order/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Ecommerce.Models
 @model OrderVM
 
-<h2> Product List </h2>
+<h2> Order List </h2>
 
 <table id="tblData" class="table table-bordered table-striped" width="100%">
     <thead>
