Access to manage order pages

--- a/EcommerceWeb/Areas/Customer/Views/Order/Details.cshtml
+++ b/EcommerceWeb/Areas/Customer/Views/Order/Details.cshtml
@@ -3,6 +3,7 @@
 @model OrderVM
 
 <form method="post">
+    <input asp-for="OrderHeader.Id" hidden />
     <br />
     <div class="container">
         <div class="card">
@@ -212,7 +213,7 @@
                             </div>
                             @if(User.IsInRole(SD.Role_Admin))
                             {
-                                <input type="submit" class="btn btn-warning form-control my-1" value="Update Order Details" />
+                                <button type="submit" asp-action="UpdateOrderDetails" class="btn btn-warning form-control my-1">Update Order Details</button>
                             }
 
                         </div>
