--- a/EcommerceWeb/Views/Shared/_Layout.cshtml
+++ b/EcommerceWeb/Views/Shared/_Layout.cshtml
@@ -32,10 +32,10 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="Admin" asp-controller="Product" asp-action="Index">Product</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="Admin" asp-controller="Order" asp-action="Index">Manage Order</a>
-                            </li>
                         }
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="Customer" asp-controller="Order" asp-action="Index">Manage Order</a>
+                        </li>
 
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="Customer" asp-controller="ShoppingCart" asp-action="Index">Shopping Cart</a>
