Added sweet alerts to ship order btn

--- a/EcommerceWeb/Areas/Customer/Views/Order/Details.cshtml
+++ b/EcommerceWeb/Areas/Customer/Views/Order/Details.cshtml
@@ -139,7 +139,7 @@
                                 <div class="col-9">
                                     @if (User.IsInRole(SD.Role_Admin))
                                     {
-                                        <input asp-for="OrderHeader.Carrier" type="text" class="form-control" />
+                                        <input id="carrier" asp-for="OrderHeader.Carrier" type="text" class="form-control" />
 
                                     }
                                     else
@@ -153,7 +153,7 @@
                                 <div class="col-9">
                                     @if (User.IsInRole(SD.Role_Admin))
                                     {
-                                        <input asp-for="OrderHeader.TrackingNumber" type="text" class="form-control" />
+                                        <input id="trackingNumber" asp-for="OrderHeader.TrackingNumber" type="text" class="form-control" />
 
                                     }
                                     else
@@ -259,11 +259,11 @@
                             {
                                 @if(Model.OrderHeader.OrderStatus == SD.StatusApproved)
                                 {
-                                    <button type="submit" class="btn btn-primary form-control my-1" >Start Processing</button>
+                                    <button type="submit" asp-action="StartProcessing" class="btn btn-primary form-control my-1">Start Processing</button>
                                 }
                                 @if(Model.OrderHeader.OrderStatus == SD.StatusInProcess)
                                 {
-                                    <button type="submit" class="btn btn-primary form-control my-1">Ship Order</button>
+                                    <button type="submit" onclick="return ValidateInput()" class="btn btn-primary form-control my-1">Ship Order</button>
                                 }
 
                                 @if(Model.OrderHeader.OrderStatus != SD.StatusRefunded &&
@@ -281,3 +281,31 @@
         </div>
     </div>
 </form>
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+    <script>
+        function ValidateInput() {
+            if(document.getElementById("trackingNumber").value == "") {
+                Swal.fire({
+                    icon: "error",
+                    title: "Oops...",
+                    text: "Please enter tracking number!",
+                });
+                return false;
+            }
+
+            if (document.getElementById("carrier").value == "") {
+                Swal.fire({
+                    icon: "error",
+                    title: "Oops...",
+                    text: "Please enter carrier!",
+                });
+                return false;
+            
+            }
+
+            return true;
+        }
+    </script>
+}
