--- a/EcommerceWeb/Areas/Customer/Views/Order/Details.cshtml
+++ b/EcommerceWeb/Areas/Customer/Views/Order/Details.cshtml
@@ -263,7 +263,7 @@
                                 }
                                 @if(Model.OrderHeader.OrderStatus == SD.StatusInProcess)
                                 {
-                                    <button type="submit" onclick="return ValidateInput()" class="btn btn-primary form-control my-1">Ship Order</button>
+                                    <button type="submit" asp-action="ShipOrder" onclick="return ValidateInput()" class="btn btn-primary form-control my-1">Ship Order</button>
                                 }
 
                                 @if(Model.OrderHeader.OrderStatus != SD.StatusRefunded &&
