--- a/EcommerceWeb/Areas/Customer/Views/ShoppingCart/Index.cshtml
+++ b/EcommerceWeb/Areas/Customer/Views/ShoppingCart/Index.cshtml
@@ -47,10 +47,10 @@
                                 <div class="col-6 col-sm-4 col-lg-6 pt-2">
                                     <div class="w-75 btn-group" role="group">
                                         <a asp-action="Plus" asp-route-cartId="@item.Id" class="btn btn-outline-primary bg-gradient py-2">
-                                            <i class="bi bi-plus-square">+</i>
+                                            <i class="bi bi-plus-square"></i>
                                         </a> &nbsp;
                                         <a asp-action="Minus" asp-route-cartId="@item.Id" class="btn btn-outline-primary bg-gradient py-2">
-                                            <i class="bi bi-dash-square">-</i>
+                                            <i class="bi bi-dash-square"></i>
                                         </a>
                                     </div>
 
