--- a/EcommerceWeb/Areas/Customer/Views/Home/Index.cshtml
+++ b/EcommerceWeb/Areas/Customer/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
             <div class="row p-2">
                 <div class="col-12 p-1">
                     <div class="card border-0 p-3 shadow border-top border-5 rounded">
-                        <img src="@product.ImageUrl" class="card-img-top rounded" />
+                        <img width="800" height="380" src="@product.ImageUrl" class="card-img-top rounded" />
                         <div class="card-body">
                             <div class="pl-1">
                                 <p>@product.Title, Vol. @product.Volume</p>
