--- a/EcommerceWeb/Areas/Identity/Pages/Account/Register.cshtml
+++ b/EcommerceWeb/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+@using Ecommerce.Utility
 @model RegisterModel
 @{
     ViewData["Title"] = "Register";
@@ -57,11 +58,15 @@
                 <label asp-for="Input.PostalCode"></label>
                 <span asp-validation-for="Input.PostalCode" class="text-danger"></span>
             </div>
-            <div class="form-floating mb-3">
-                <select asp-for="Input.Role" asp-items="@Model.Input.RoleList">
-                    <option disabled selected> -- Select Role --</option>
-                </select>
-            </div>
+            @if (User.IsInRole(SD.Role_Admin))
+            {
+                <div class="form-floating mb-3">
+                    <select asp-for="Input.Role" asp-items="@Model.Input.RoleList">
+                        <option disabled selected> -- Select Role --</option>
+                    </select>
+                </div>
+            }
+            
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
     </div>
