--- a/EcommerceWeb/Areas/Customer/Views/ShoppingCart/Index.cshtml
+++ b/EcommerceWeb/Areas/Customer/Views/ShoppingCart/Index.cshtml
@@ -83,7 +83,10 @@
                 </div>
                 <div class="row">
                     <div class="col-md-2 offset-md-5">
-                        <a asp-action="Summary" class="btn btn-primary border-0 bg-gradient w-100 py-2">Summary</a>
+                        @if(Model.shoppingCartList.ToList().Count != 0)
+                        {
+                            <a asp-action="Summary" class="btn btn-primary border-0 bg-gradient w-100 py-2">Summary</a>
+                        }
                     </div>
                 </div>
             </div>
