Added user view

--- a/EcommerceWeb/Areas/Admin/Views/User/Index.cshtml
+++ b/EcommerceWeb/Areas/Admin/Views/User/Index.cshtml
@@ -1,1 +1,17 @@
-﻿
+﻿<h2> User List </h2>
+
+<table id="tblData" class="table table-bordered table-striped" width="100%">
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Email</th>
+            <th>Phone Number</th>
+            <th>Role</th>
+        </tr>
+    </thead>
+       
+ </table>
+
+ @section Scripts {
+     <script src="~/js/user.js"></script>
+ }
