--- a/EcommerceWeb/Areas/Admin/Views/User/Index.cshtml
+++ b/EcommerceWeb/Areas/Admin/Views/User/Index.cshtml
@@ -7,6 +7,7 @@
             <th>Email</th>
             <th>Phone Number</th>
             <th>Role</th>
+            <th>Function</th>
         </tr>
     </thead>
        
