--- a/EcommerceWeb/Views/Shared/_Layout.cshtml
+++ b/EcommerceWeb/Views/Shared/_Layout.cshtml
@@ -51,7 +51,10 @@
                                     </li>
                                     <li><hr class="dropdown-divider"/></li>
                                     <li class="nav-item">
-                                        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register user</a>
+                                        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Create user</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link text-dark" asp-area="Admin" asp-controller="User" asp-action="Index">Manage users</a>
                                     </li>
                                 </ul>
                             </li>
